--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <provider
+            android:authorities="com.telran.sunshine"
+            android:name=".data.WeatherProvider"/>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
